# qptrie

./: CHANGELOG.md  qptrie.cabal
bench/: Main.hs  RandomNumbers.hs
src/Data/Trie/: Internal.hs  Quad.hs
src/Data/Trie/Quad/: Bytes.hs  Prefix.hs  Word128.hs
src/Data/Trie/Quad/Prefix/Word32/: Word64.hs
test/: Main.hs
