cabal-version: 3.0
name: qptrie
version: 0.1.0.0
synopsis: qp tries
bug-reports: https://github.com/andrewthad/qptrie
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2021 Andrew Martin
category: Data
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules: Data.Trie.Quad
  build-depends:
    , base >=4.12 && <5
    , primitive >=0.7 && <0.8
    , run-st >=0.1 && <0.2
  hs-source-dirs: src
  default-language: Haskell2010

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -Wall -O2
  build-depends:
    , QuickCheck >=2.13.1
    , base >=4.12.0.0 && <5
    , tasty >=1.2.3
    , tasty-hunit >=0.10.0.2
    , tasty-quickcheck
    , primitive
    , qptrie
